tests/purs/passing/RedefinedFixity.purs
module Main where

import M3
import Effect.Console (log)

main = log "Done"
