tests/purs/failing/ModuleNameNumberStart.purs
-- @shouldFailWith ErrorParsingModule
module 0ModuleNameStartsWithNumber where

import Effect.Console (log)

main = log "Done"
